--- a/index.html
+++ b/index.html
@@ -7,88 +7,59 @@
   <meta name="description" content="The best financial advise for long term personal investment">
   <meta name="author" content="P. Ghadia">
   <title>Investment Principles</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+
 </head>
 
 <body>
+  <div class="Top" id="top-content">
+    <h1 background-color: black; color: white>Welcome to the world of Investments</h1><br>
+    <p>“To invest successfully over a lifetime does not require a stratospheric IQ, unusual business insights, or inside information. What’s needed is a sound intellectual framework for making decisions and the ability to keep emotions from corroding
+      that framework.” -- <em>Warren Buffett</em></p>
+  </div>
+  <div class="Top" id="top-image">
+    <img src="dollar.jpg" alt="Value>Price">
+  </div>
 
-  <h1>Welcome to the world of Investments</h1>
-  <p>“To invest successfully over a lifetime does not require a stratospheric IQ, unusual business insights, or inside information. What’s needed is a sound intellectual framework for making decisions and the ability to keep emotions from corroding
-    that framework.” -- <em>Warren Buffett</em></p>
-  <img
-    src="https://images.squarespace-cdn.com/content/v1/568cf1da4bf1182258ed49cc/1487672038081-HYW4637DZ6FR1AXMQD4Y/ke17ZwdGBToddI8pDm48kOVcV5aDFr20iZPw6K_1HcsUqsxRUqqbr1mOJYKfIPR7LoDQ9mXPOjoJoqy81S2I8N_N4V1vUb5AoIIIbLZhVYxCRW4BPu10St3TBAUQYVKcn_ra3fXDzwjFcpjxC9qxtgmcl1KPWqoa-BFOdweJH-pjOMOUoP8cUxyHxn49Oacz/image-asset.png"
-    alt="Value>Price">
-  <p>Investing requires a sound intellectual framework for making decisions and the ability to keep emotions from corroding the framework.Speculators depend on technical analysis where they buy when markets are going up and sell when markets are
-    going down – however, Graham advises on the exact opposite strategy based on fundamental analysis. One of the long prevailing view of stock market investment is successful investing lies first in the choice of those industries that are most
-    likely to grow in the future and then in identifying the most promising companies in these industries.</p>
-  <hr size="3" noshade>
-  <h3>Elements of investing</h3>
-  <ul>
-    <li>Thoroughly analyze a company and the soundness of the underlying business</li>
-    <li>Deliberately protect yourself against serious losses</li>
-    <li>Aspire to adequate and not extraordinary returns</li>
-  </ul>
+  <div class="Content">
+    <p>Investing requires a sound intellectual framework for making decisions and the ability to keep emotions from corroding the framework.Speculators depend on technical analysis where they buy when markets are going up and sell when markets are
+      going down – however, Graham advises on the exact opposite strategy based on fundamental analysis. One of the long prevailing view of stock market investment is successful investing lies first in the choice of those industries that are most
+      likely to grow in the future and then in identifying the most promising companies in these industries.</p>
+    <hr>
+    <h3>Elements of investing</h3>
+    <ul>
+      <li>Thoroughly analyze a company and the soundness of the underlying business</li>
+      <li>Deliberately protect yourself against serious losses</li>
+      <li>Aspire to adequate and not extraordinary returns</li>
+    </ul>
 
-  <h3>Defensive Investor</h3>
-  <p>For a <a href="https://www.arborinvestmentplanner.com/the-defensive-investor-the-intelligent-investor-book-review-chapters-4-5-14/#:~:text=The%20defensive%20investor%20is%20unwilling,effort%2C%20research%2C%20and%20monitoring.">defensive
-      investor</a>, one who wants to invest for a longer term and doesn’t want to be bothered by the changes in the market conditions to modify his portfolio, he should have substantial investments in both bonds and equity.</p>
-  <ol>
-    <li>Invest in well-established funds as an alternative to creating own stock portfolio</li>
-    <li>Utilize common/mutual trust funds for professional administration of the money</li>
-    <li>Dollar-cost averaging which simply means to invest in common stocks in a uniform manner (same amount every month)</li>
-  </ol>
+    <h3>Defensive Investor</h3>
+    <p>For a <a href="https://www.arborinvestmentplanner.com/the-defensive-investor-the-intelligent-investor-book-review-chapters-4-5-14/#:~:text=The%20defensive%20investor%20is%20unwilling,effort%2C%20research%2C%20and%20monitoring.">defensive
+        investor</a>, one who wants to invest for a longer term and doesn’t want to be bothered by the changes in the market conditions to modify his portfolio, he should have substantial investments in both bonds and equity.</p>
+    <ol>
+      <li>Invest in well-established funds as an alternative to creating own stock portfolio</li>
+      <li>Utilize common/mutual trust funds for professional administration of the money</li>
+      <li>Dollar-cost averaging which simply means to invest in common stocks in a uniform manner (same amount every month)</li>
+    </ol>
 
-  <p>Now, all the above strategies are proven to be successful in the longrun. But, there is one problem here which is that all of them are boring for an investor. the defensive investor can create his own portfolio of stocks following a certain
-    amount of quantitative analysis, in addition to the qualitative. The list of quantitative factors are mentioned below. Note that any stock which satisfies all the below factors will be selected.</p>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Factor</th>
-        <th>Criteria Description</th>
-        <th>Importance</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Adequate Size</td>
-        <td>Defensive investor should only be interested in large and prominent firms, which provide a big margin of safety for him to be at peace without following the market.</td>
-        <td>🤑🤑🤑🤑</td>
-      </tr>
-      <tr>
-        <td>Strong Financial condition</td>
-        <td>While this might mean a lot to any security analyst, Graham insists on looking into two numbers; Current Ratio should be at least 2; And Long-term debt should not exceed Net current Assets</td>
-        <td>🤑🤑🤑🤑🤑</td>
-      </tr>
-      <tr>
-        <td>Earning Stability</td>
-        <td>He insists to choose firms which have maintained a stable earning in the last 10 years</td>
-        <td>🤑🤑🤑🤑</td>
-      </tr>
-      <tr>
-        <td>Dividend Record</td>
-        <td>This factor might not be a strong one nowadays, but the companies who are able to maintain it for periods such as 20 years are to be selected.</td>
-        <td>🤑🤑</td>
-      </tr>
-      <tr>
-        <td>Earnings growth</td>
-        <td>The recent 3-year average of diluted EPS should be at least 1.33 times the 3-year EPS average 10 years back. This is highly conservative, and most of the growth stocks will seem to be performing very well when accessed from this factor
-          alone.</td>
-          <td>🤑🤑🤑🤑🤑</td>
-      </tr>
-      <tr>
-        <td>PE ratio</td>
-        <td>Current price should not be more than 15 times the average earning of the past 3 years.</td>
-        <td>🤑🤑🤑🤑🤑</td>
-      </tr>
-      <tr>
-        <td>Price to Asset ratio</td>
-        <td>Price to Book value/share should not cross 1.5. Or, we can use a composite price multiplier that P/E*P/BV should not cross 22.5</td>
-        <td>🤑🤑🤑</td>
-      </tr>
 
-    </tbody>
-  </table>
+    <p>Now, all the above strategies are proven to be successful in the longrun. But, there is one problem here which is that all of them are boring for an investor. the defensive investor can create his own portfolio of stocks following a certain
+      amount of <a href="Defensive Investor.html">quantitative analysis</a>, in addition to the qualitative.</p>
 
-  <p>Next: <a href="Stock market investment.html">The Truth about stock market investment</a><em></em></p>
+    <h3>Enterprising Investor</h3>
+    <p>For an entreprising investor, who aims to attain a better than average result, he must follow policies which are inherently sound and promising and but popular on Wall street (since they should have already been reflecting in the market
+      prices).<br>
+      There are many enterprising investment opportunities in the market which are not in scope for a regular retail investor, since they don’t have the large pockets (handled by institutions and HNIs) needed for realizing a profit from such areas –
+      Some of these modes are short selling, arbitrages on currency & merger pricing, and Venture capital investment.
+    </p>
+
+    <p>Next: <a href="Stock market investment.html">The Truth about stock market investment</a><em></em></p>
+    <a href="Contact me.html">Contact Me</a><em></em>
+  </div>
+
+
+
 
 </body>
 
