--- a/Stock market investment.html
+++ b/Stock market investment.html
@@ -4,10 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>Stock Market</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
-  <h2>The Truth about stock market investment</h2>
+  <div class="Top">
+    <h2>The Truth about stock market investment</h2>
+    <p>“The true investor scarcely ever is forced to sell his shares, and at all times he is free to disregard the current price quotation. He need pay attention to it and act upon it only to the extent that it suits his book, and no more. Thus the investor who permits himself to be stampeded or unduly worried by unjustified market declines in his holdings is perversely transforming his basic advantage into a basic disadvantage. That man would be better off if his stocks had no market quotation at all, for he would then be spared the mental anguish caused him by other persons’ mistakes of judgement.” -- <em>Benjamin Graham</em>
+    </p>
+  </div>
+<div class="Content">
   <p>The stock market performance depends on three factors</p>
   <ul>
     <li>Real growth of companies – which includes their earnings and dividend yields</li>
@@ -16,23 +23,22 @@
   </ul>
   <p>But the only absolute truth about stock market forecasts is that they can always be wrong. “Being humble about your forecasting powers will keep you from risking too much on a view of the future that may well turn out to be wrong.The market
     provides us with prices, our job is to decide whether it is to our advantage to act on them. We don’t have to trade with Mr. Market just because he constantly begs you to.</p>
+    <hr>
 
-<hr>
-  <h4>Contact me for further help</h4>
-  <form action="mailto:prabeen.nirmaan@gmail.com" method="post" enctype="text/plain">
-    <label>Name:</label>
-    <input type="text" name="From" value="">
-    <br>
-    <label>Mail ID:<input type="email" name="Mail contact" value=""></label>
-    <br>
-    <label>Query:</label>
-    <textarea name="Message" rows="8" cols="80"></textarea>
-    <br>
-    <label>Subscribe to our monthly Stockpick <input type="checkbox"></label>
-    <br>
-    <input type="submit" name="">
-  </form>
+  <h3>Speculation vs Investment</h3>
+  <p>Speculators depend on technical analysis where they buy when markets are going up and sell when markets are going down – however, Graham advises on the exact opposite strategy based on fundamental analysis. <br>
+    Speculation is at times necessary and unavoidable because in many common stocks there are substantial possibilities of both profits and losses. Some amount of speculation can be done when trying your luck but keep a very small amount (whose loss can be bear). Never mingle the speculative and investment operations in the same account or thoughts. In addition to understanding whether the money invested in any security is speculative or not, we should also keep our total share of investment limited (as low as possible) in our speculative account. <br>
 
+    An investor would be comfortable to own a stock and not follow its daily share price movements for few days, while for a speculator the share price changes is like oxygen.
+Evidence that the world is impatient in trading and this is leading to more speculative investments – The annual turnover rate (the average time period a stock is held by a shareholder) has decreased from 5 years in 1973 to 11.4 months in 2002.
+<strong>Speculation rule:</strong> First understand that you are basically speculating – then understand that there will be losses in some/many of the stock picks – finally never go beyond a personal limit of wealth to invest in this category (10%)
+</p>
+
+    <p>Next: <a href="Margin of Safety.html">Margin of Safety</a><em></em>
+      </p>
+    <p><a href="Contact me.html">Contact Me</a><em></em>
+    </p>
+</div>
 
 </body>
 
