--- a/Stock market investment.html
+++ b/Stock market investment.html
@@ -9,8 +9,13 @@
 </head>
 
 <body>
+  <div class="Tab">
+    <h5><a id="About-us" href="About Me.html">About Me</a></h5>
+  </div>
+
   <div class="Top">
-    <h2>The Truth about stock market investment</h2>
+    <img id="top-image" src="https://media1.giphy.com/media/iDm5GBbdvJai79weph/200.webp?cid=ecf05e47a9lbtt7r8w6sz3j6wy8cblaclnbxgd819k0v78o0&rid=200.webp" alt="Truth">
+    <h1>The Truth about stock market investment</h1>
     <p>“The true investor scarcely ever is forced to sell his shares, and at all times he is free to disregard the current price quotation. He need pay attention to it and act upon it only to the extent that it suits his book, and no more. Thus the investor who permits himself to be stampeded or unduly worried by unjustified market declines in his holdings is perversely transforming his basic advantage into a basic disadvantage. That man would be better off if his stocks had no market quotation at all, for he would then be spared the mental anguish caused him by other persons’ mistakes of judgement.” -- <em>Benjamin Graham</em>
     </p>
   </div>
@@ -21,7 +26,7 @@
     <li>Inflationary growth of the economy during the period</li>
     <li>Speculative growth – which depends on the investing public’s appetite for growth</li>
   </ul>
-  <p>But the only absolute truth about stock market forecasts is that they can always be wrong. “Being humble about your forecasting powers will keep you from risking too much on a view of the future that may well turn out to be wrong.The market
+  <p>But the only absolute truth about stock market forecasts is that they can always be wrong. Being humble about your forecasting powers will keep you from risking too much on a view of the future that may well turn out to be wrong.The market
     provides us with prices, our job is to decide whether it is to our advantage to act on them. We don’t have to trade with Mr. Market just because he constantly begs you to.</p>
     <hr>
 
@@ -30,7 +35,7 @@
     Speculation is at times necessary and unavoidable because in many common stocks there are substantial possibilities of both profits and losses. Some amount of speculation can be done when trying your luck but keep a very small amount (whose loss can be bear). Never mingle the speculative and investment operations in the same account or thoughts. In addition to understanding whether the money invested in any security is speculative or not, we should also keep our total share of investment limited (as low as possible) in our speculative account. <br>
 
     An investor would be comfortable to own a stock and not follow its daily share price movements for few days, while for a speculator the share price changes is like oxygen.
-Evidence that the world is impatient in trading and this is leading to more speculative investments – The annual turnover rate (the average time period a stock is held by a shareholder) has decreased from 5 years in 1973 to 11.4 months in 2002.
+Evidence that the world is impatient in trading and this is leading to more speculative investments – The annual turnover rate (the average time period a stock is held by a shareholder) has decreased from 5 years in 1973 to 11.4 months in 2002.<br>
 <strong>Speculation rule:</strong> First understand that you are basically speculating – then understand that there will be losses in some/many of the stock picks – finally never go beyond a personal limit of wealth to invest in this category (10%)
 </p>
 
@@ -38,6 +43,12 @@ Evidence that the world is impatient in trading and this is leading to more spec
       </p>
     <p><a href="Contact me.html">Contact Me</a><em></em>
     </p>
+</div>
+<div class="bottom-container">
+  <a href="https://www.linkedin.com/in/prabeen-ghadia-04866858/"><img class="footer-link" src="https://www.flaticon.com/premium-icon/icons/svg/2956/2956131.svg" alt="LinkedIn"></a>
+  <a href="https://twitter.com/Prabeen1993"><img class="footer-link" src="https://www.flaticon.com/premium-icon/icons/svg/2673/2673642.svg" alt="Twitter"></a>
+  <a href="https://www.facebook.com/prabeenghadia/"><img class="footer-link" src="https://www.flaticon.com/premium-icon/icons/svg/2956/2956108.svg" alt="Facebook"></a>
+  <p>© 2020 Prabeen Ghadia</p>
 </div>
 
 </body>
