--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
 </head>
 
 <body>
-  <div class="Top" id="top-content">
+  <div class="Tab">
+    <h5><a id="About-us" href="About Me.html">About Me</a></h5>
+  </div>
+
+  <div class="Top">
+    <img id="top-image" src="dollar.jpg" alt="Value>Price" >
     <h1 background-color: black; color: white>Welcome to the world of Investments</h1><br>
-    <p>“To invest successfully over a lifetime does not require a stratospheric IQ, unusual business insights, or inside information. What’s needed is a sound intellectual framework for making decisions and the ability to keep emotions from corroding
+    <p >“To invest successfully over a lifetime does not require a stratospheric IQ, unusual business insights, or inside information. What’s needed is a sound intellectual framework for making decisions and the ability to keep
+      emotions from corroding
       that framework.” -- <em>Warren Buffett</em></p>
+
   </div>
-  <div class="Top" id="top-image">
-    <img src="dollar.jpg" alt="Value>Price">
-  </div>
+
 
   <div class="Content">
     <p>Investing requires a sound intellectual framework for making decisions and the ability to keep emotions from corroding the framework.Speculators depend on technical analysis where they buy when markets are going up and sell when markets are
@@ -58,7 +63,12 @@
     <a href="Contact me.html">Contact Me</a><em></em>
   </div>
 
-
+  <div class="bottom-container">
+    <a href="https://www.linkedin.com/in/prabeen-ghadia-04866858/"><img class="footer-link" src="https://www.flaticon.com/premium-icon/icons/svg/2956/2956131.svg" alt="LinkedIn"></a>
+    <a href="https://twitter.com/Prabeen1993"><img class="footer-link" src="https://www.flaticon.com/premium-icon/icons/svg/2673/2673642.svg" alt="Twitter"></a>
+    <a href="https://www.facebook.com/prabeenghadia/"><img class="footer-link" src="https://www.flaticon.com/premium-icon/icons/svg/2956/2956108.svg" alt="Facebook"></a>
+    <p>© 2020 Prabeen Ghadia</p>
+  </div>
 
 
 </body>
