--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="The best financial advise for long term personal investment">
   <meta name="author" content="P. Ghadia">
   <title>Investment Principles</title>
-  <link rel="stylesheet" href="CSS/styles.css">
+  <link rel="stylesheet" href="/CSS/styles.css">
   <link rel="icon" href="favicon.ico">
 
 </head>
