--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="The best financial advise for long term personal investment">
   <meta name="author" content="P. Ghadia">
   <title>Investment Principles</title>
-  <link rel="stylesheet" type= "text/css" href="CSS/styles.css">
+  <link rel="stylesheet" type="text/css" href="CSS/styles.css">
   <link rel="icon" href="favicon.ico">
 
 </head>
@@ -60,7 +60,8 @@
     </p>
 
     <p>Next: <a href="Stock market investment.html">The Truth about stock market investment</a><em></em></p>
-    <a href="Contact me.html">Contact Me</a><em></em>
+    <a class="btn" href="Contact me.html"><button type="button" name="button">Contact Me</button><em></em></a>
+
   </div>
 
   <div class="bottom-container">
