--- a/Margin Of Safety.html
+++ b/Margin Of Safety.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Margin of Safety</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="CSS/styles.css">
   <link rel="icon" href="favicon.ico">
 </head>
 
