--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="keywords" content="Value,Investment,Strategy">
   <meta name="description" content="The best financial advise for long term personal investment">
   <meta name="author" content="P. Ghadia">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Investment Principles</title>
   <link rel="stylesheet" type="text/css" href="CSS/styles.css">
   <link rel="icon" href="favicon.ico">
