--- a/About Me.html
+++ b/About Me.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>About Me</title>
   <link rel="stylesheet" type="text/css" href="CSS/styles.css">
   <link rel="icon" href="favicon.ico">
